2008-06-23  Mark Probst  <mark.probst@gmail.com>

	* generic-virtual2.2.cs: Test case for a call from a generic
	method to a method of a generic class where the generic method
	does not require the MRGCTX.

	* Makefile.am: Test added.

2008-06-23  Mark Probst  <mark.probst@gmail.com>

	* generic-exceptions.2.cs: Test case for exception handlers in
	generic methods with catch clauses depending on the method type
	arguments.

	* Makefile.am: Test added.

2008-06-20  Rodrigo Kumpera  <rkumpera@novell.com>

	* bug-349190.2.cs: Regression test for bug #349190.
	Checks the encoding of generic MethodBuilders that
	have been not instantiated.

	* Makefile.am: Test added.

2008-06-19  Rodrigo Kumpera  <rkumpera@novell.com>

	* generic-ldtoken-method.2.il: Fix the signature of GetMethodHandle.

2008-06-17  Mark Probst  <mark.probst@gmail.com>

	* generic-delegate.2.cs: Test for constructing delegates via
	CreateDelegate.

2008-06-17  Mark Probst  <mark.probst@gmail.com>

	* generic-special.2.cs: Test case for static special fields in
	generic classes.

	* Makefile.am: Test added.

2008-06-17  Mark Probst  <mark.probst@gmail.com>

	* Makefile.am: Also run generic sharing tests with inlining
	enabled.

2008-06-16  Mark Probst  <mark.probst@gmail.com>

	* generic-virtual.2.cs: Delegate test for static generic methods.

2008-06-14  Kornél Pál  <kornelpal@gmail.com>

	* mixed-mode: Add x64 target to mixed-mode assembly tests.

	Contributed under MIT/X11 license.

2008-06-13  Zoltan Varga  <vargaz@gmail.com>

	* modules.cs modules-m1.cs: New files. Tests for .netmodules.

2008-06-13  Mark Probst  <mark.probst@gmail.com>

	* generic-static-methods.2.cs: Test case for static generic
	methods.

	* Makefile.am: Test added.

2008-06-12  Bill Holmes  <billholmes54@gmail.com>
	* libtest.c, winx64structs.cs :
	  Changing winx64structs.cs to use the TestDriver.dll

	Contributed under MIT/X11 license.

2008-06-12  Bill Holmes  <billholmes54@gmail.com>
	* libtest.c, winx64structs.cs :